fix z-index

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -191,7 +191,7 @@ header {
 /* NAV SECTION */
 #nav-section {
     position: fixed;
-    z-index: 2;
+    z-index: 3;
     left: 0;
     right: 0;
     transition: background-color 0.3s ease-in-out;
@@ -250,7 +250,7 @@ header {
     left: 0;
     right: 0;
     bottom: 0;
-    z-index: 1;
+    z-index: 2;
     background-color: var(--white);
     padding: 60px 30px;
     transform: translateY(-100%);
